Fix horizontal scrollbar bullshit

--- a/assets/less/general/basics.less
+++ b/assets/less/general/basics.less
@@ -18,6 +18,7 @@
   --animation-base: ease-in-out;
   --font-base: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   --navbar-height: 80px;
+  --scrollbar: 0px;
 }
 
 @media (max-width: 767px) {
